maven replacer for Dockerfile

--- a/myhealth-api/pom.xml
+++ b/myhealth-api/pom.xml
@@ -324,6 +324,25 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>replacer</artifactId>
+				<version>1.5.3</version>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<file>target/classes/docker/Dockerfile</file>
+					<regex>false</regex>
+					<token>$BUILD_NUMBER$</token>
+					<value>${project.version}</value>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
