--- a/myhealth-b2m-client/pom.xml
+++ b/myhealth-b2m-client/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 
 	<dependencies>
-		<!-- Spring -->
+		<!-- Spring framework -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
